WF41 brings hibernate validator 9.x (JBV 3.1) - Fix ValidationExtension discovery code